<resources>
    <string name="app_name">NXPZigbee</string>
    <string name="title_home" >主页</string>
    <string name="title_group" >组控</string>
    <string name="title_me" >我的</string>
    <string name="cancel" >取消</string>
    <string name="sure" >确定</string>
    <string name="hint" >提示</string>
    <string name="permission" >当前应用缺少必要权限，该功能暂时无法使用。如若需要，请单击【确定】按钮前往设置中心进行权限授权。</string>
    <string name="title_device" >设备</string>
    <string name="add_device">添加设备</string>
    <string name="title_light" >灯</string>
    <string name="title_plug" >插座</string>
    <string name="title_sensor">传感器</string>
    <string name="menu_open" >全开</string>
    <string name="menu_close" >全关</string>
    <string name="gateway_setting">网关设置</string>
    <string name="activity_splash">体验智能科技，畅享人性家庭</string>
    <string name="activity_add_gateway_wifi_hint">请先连接wifi</string>
    <string name="activity_add_gateway_pwd_hint">请输入当前WIFI密码配置设备接入互联网</string>
    <string name="prompt_password">密码</string>
    <string name="activity_add_gateway_config">一键配置</string>
    <string name="add_gateway">添加网关</string>
    <string name="activity_add_gateway_skip">已添加,跳过</string>
</resources>
